--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,12 +9,12 @@ services:
     ports:
       - 80:3000
     environment:
-      AUTH: http://user-service:3001/users/id
-      HOST_users: "{\"host\":\"http://user-service:3001/\",\"loginRequired\":false}"
+      AUTH: http://auth-service:3001/users/id
+      HOST_users: "{\"host\":\"http://auth-service:3001/\",\"loginRequired\":false}"
 
-  #User Service
-  user-service:
-    image: shial/user-service:0.0.7
+  #Auth Service
+  auth-service:
+    image: shial/user-service:0.0.8
     restart: unless-stopped
     environment:
       PSQL_DATABASE_URL: ${PSQL_DATABASE_URL}
