--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ services:
     environment:
       AUTH: http://auth-service:3001/users/id
       HOST_users: "{\"host\":\"http://auth-service:3001/\",\"loginRequired\":false}"
+      HOST_profiles: "{\"host\":\"http://profile-service:3002/\",\"loginRequired\":true}"
 
   #Auth Service
   auth-service:
@@ -20,3 +21,10 @@ services:
       PSQL_DATABASE_URL: ${PSQL_DATABASE_URL}
       FACEBOOK_APP_SECRET: ${FACEBOOK_APP_SECRET}
       FACEBOOK_APP_ID: ${FACEBOOK_APP_ID}
+  
+  #Profile Service
+  profile-service:
+    image: shial/profile-service:0.0.1
+    restart: unless-stopped
+    environment:
+      PSQL_DATABASE_URL: ${PSQL_PROFILE_DATABASE_URL}
