--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,7 @@ services:
       AUTH: http://auth-service:3001/users/id
       HOST_users: "{\"host\":\"http://auth-service:3001/\",\"loginRequired\":false}"
       HOST_profiles: "{\"host\":\"http://profile-service:3002/\",\"loginRequired\":true}"
+      HOST_products: "{\"host\":\"http://product-service:3003/\",\"loginRequired\":true}"
 
   #Auth Service
   auth-service:
@@ -28,3 +29,10 @@ services:
     restart: unless-stopped
     environment:
       PSQL_DATABASE_URL: ${PSQL_PROFILE_DATABASE_URL}
+
+  #Product Service
+  profile-service:
+    image: shial/product-service:0.0.1
+    restart: unless-stopped
+    environment:
+      PSQL_DATABASE_URL: ${PSQL_PRODUCT_DATABASE_URL}
