--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
 
   #API Gateway
   api-gateway:
-    image: shial/api-gateway:0.0.7
+    image: shial/api-gateway:0.0.8
     restart: unless-stopped
     ports:
       - 80:3000
@@ -31,7 +31,7 @@ services:
       PSQL_DATABASE_URL: ${PSQL_PROFILE_DATABASE_URL}
 
   #Festivals Service
-  profile-service:
+  product-service:
     image: shial/product-service:0.0.3
     restart: unless-stopped
     environment:
