--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,7 @@ services:
       PSQL_DATABASE_URL: ${PSQL_DATABASE_URL}
       FACEBOOK_APP_SECRET: ${FACEBOOK_APP_SECRET}
       FACEBOOK_APP_ID: ${FACEBOOK_APP_ID}
+      TOKEN_EXPIRATION_INTERVAL: ${TOKEN_EXPIRATION_INTERVAL}
   
   #Profile Service
   profile-service:
